# REE-ModPilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cli.py  lesson.md  verify_blender_mcp.py  verify_mvp.py  verify_mvp_config.example.json
ModPilot/: .env.example  modpilot_backend.py  modpilot_backend.spec  pyproject.toml
ModPilot/app/: armor_catalog.py  config.py  config_store.py  main.py  resources.py  toolkit_probe.py
ModPilot/app/agent/: dsml.py  error_handler.py  history.py  history_heal.py  loop.py  prompts.py
ModPilot/app/blender/: client.py  preset_catalog.py  state.py
ModPilot/app/data/: armor_sets.json  physics_presets.json
ModPilot/app/llm/: anthropic_provider.py  client.py  ollama_provider.py  openai_provider.py
ModPilot/app/phases/: base.py  batch_export.py  infer_model_type.py  material.py  mesh_cleanup.py  physics_annotate.py  physics_bones.py  pose_correction.py  preset_write.py  query_tools.py  setup.py  skeleton_align.py  vertex_groups.py
ModPilot/app/templates/: chat.html  config.html
ModPilot/eval/: context_eval.py
ModPilot/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
ModPilot/frontend/src/: App.tsx  main.tsx
ModPilot/frontend/src-tauri/: Cargo.toml  tauri.conf.json
ModPilot/scripts/: _walkthrough_common.py  record_phase1_walkthrough.py  record_phase23_walkthrough.py  record_phase4_walkthrough.py  record_phase5_walkthrough.py  record_phase6_done_walkthrough.py  record_ui_walkthrough.py
ModPilot/static/: app.css  app.js  config.js
ModPilot/tests/e2e/: README.md  error_choice_ui.py  session_config_form.py  widget_classification_ui.py
ModPilot/tests/unit/: test_agent_interrupt.py  test_agent_loop.py  test_agent_loop_events.py  test_agent_loop_history.py  test_app_config.py  test_batch_export.py  test_blender_client.py  test_context_management_flow.py  test_history.py  test_infer_model_type.py  test_infer_model_type_routing.py  test_llm_client.py  test_material.py  test_mesh_cleanup.py  test_ollama_provider.py  test_phase_transition.py  test_phases.py  test_physics_bones.py  test_preset_catalog.py  test_preset_write.py  test_query_tools.py  test_session_config_form.py  test_setup_import_source.py  test_sse_routes.py  test_toolkit_probe.py  test_widget_routes.py  (+2 more)
(+94 files in other folders)
