[project]
name = "modpilot"
version = "0.1.0"
description = "AI-guided Blender automation for RE Engine character mods"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.100.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.36.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast tests, no external services required",
    "integration: requires real Blender on port 9876",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
