[package]
name = "modpilot"
version = "0.0.1"
description = "ModPilot — AI-guided Blender automation for RE Engine character mods"
authors = ["ModPilot"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "modpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
